--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: "Somebody4545's Blog"
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: funny python dev
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/79165198?v=4
 
 #
 # Flags below are optional
@@ -21,14 +21,14 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: somebody4545
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: channel/UCI3-6kZ1mHuBuZd5ZBZ7SoQ
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
