--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: "Somebody4545's Blog (retest)"
+name: "Somebody4545's Blog"
 theme: jekyll-theme-midnight
 # Short bio or description (displayed in the header)
 description: funny python dev
